Updated website to ensure overflow x is set to hidden for wrapper

--- a/client/css/landing-page.css
+++ b/client/css/landing-page.css
@@ -150,6 +150,7 @@ p.copyright {
     position: fixed;
     height: calc(100vh);
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
